<resources>
    <string name="app_name">Mobile-App</string>

    <string name="calculator_title">Калькулятор</string>

    <string name="counter_title">Счетчик</string>
    <string name="counter_cancel_button">Сброс</string>

    <string name="progress_title">Прогресс</string>
    <string name="progress_number_label">Число:</string>
    <string name="progress_percent_label">Процент:</string>
    <string name="progress_result_label">Результат:</string>

    <string name="camera_title">Камера</string>
    <string name="camera_activity_button_pressed">Данное устройство не разрешает использовать камеру</string>
    <string name="image_does_not_exists">Не получилось создать изображение</string>
    <string name="back_button">Назад</string>
    <string name="avatar_label">Аватар</string>

    <string name="location_title">Геолокация</string>
    <string name="coord_label">Текущие координаты:</string>
    <string name="coord_waiting">Ожидание получения координат...</string>
    <string name="location_trouble">Геолокация отключена.</string>
    <string name="coord_latitude">Широта: </string>
    <string name="coord_longitude">Долгота: </string>
    <string name="coord_altitude">Высота: </string>
    <string name="coord_bearing">Азимут: </string>
    <string name="coord_accuracy">Точность: </string>

    <string name="database_title">База данных</string>
    <string name="russian_word_label">Слово на русском:</string>
    <string name="first_form_label">Неопределенная форма:</string>
    <string name="second_form_label">Прошедшее время:</string>
    <string name="third_form_label">Причастие прошедшего времени:</string>
    <string name="add_button">Добавить</string>
    <string name="edit_button">Изменить</string>
    <string name="back_to_main_button">На главную</string>
    <string name="id_label">ID в базе данных:</string>
    <string name="next_button">Следующий</string>
    <string name="prev_button">Предыдущий</string>
    <string name="update_button">Обновить</string>
    <string name="cancel_button">Отмена</string>
    <string name="del_button">Удалить</string>
    <string name="empty_database">База данных пуста.</string>

    <string name="rest_title">REST</string>
    <string name="endpoint_label">Введите основной адрес:</string>
    <string name="connection_failed_label">Основной адресс введен не верно!!!</string>
    <string name="connect_to_server_button">Подключиться</string>
    <string name="books_list_title">Список книг</string>
    <string name="book_id">ID</string>
    <string name="book_name">Название</string>
    <string name="book_price">Цена</string>
    <string name="book_author">Автор</string>
    <string name="book_description">Описание</string>

</resources>